    - Added values for item name and sorting.
---------------------------------------------------------------------------------------------------
Version: 0.1.8
Date: 2020-08-31
  Fixes:
    - Fix issue where a tunnel could be planned 1 too long, resulting in the exit of the pump meeting with the side of an underground pipe.
    - Fix out-of-bounds obstruction checking, leading to crash.
---------------------------------------------------------------------------------------------------
Version: 0.1.9
Date: 2020-09-16
  Features:
    - Added menu to select miner for the resource you've selected. 
    - The menu remembers the selection that was made and won't show until new options are available.
    - The menu won't show if there's only 1 option available.
    - The menu can be forcefully shown, regardless of above conditions, using the alternative selection. This is activated with the same keybinding as 'Select for cancel deconstruction', default=Shift+LeftMouse.
---------------------------------------------------------------------------------------------------
Version: 0.1.10
Date: 2020-09-19
  Fixes:
    - Fixed issue where tunnel would not always be placed for 2 parallel pipes without space in between.    
---------------------------------------------------------------------------------------------------
Version: 1.0.0
Date: 2020-12-01
  Features:
    - Factorio 1.1 compatibility.
    - Ignore/deconstruct trees and rocks. 
---------------------------------------------------------------------------------------------------
Version: 1.0.1
Date: 2021-01-02
  Features:
    - Factorio 1.1.6 compatibility.
  Fixes:
    - Tiles are no longer being removed. They were unintentionally being removed as well when clearing the area of trees and rocks.
---------------------------------------------------------------------------------------------------
Version: 1.0.2
Date: ?  
  Fixes:
    - Fix crash when an extractor larger then 3x3 is used.