@@ -25,6 +25,6 @@ pump-interface-with-module-inserter-mod=When enabled, P.U.M.P. uses the the conf
 [pump-toolpicker]
 title=P.U.M.P.
 confirm=Confirm
-choose-extractor-generic=Select which miner should be placed.
-choose-extractor-unknown-selection=Select which miner should be placed.
-choose-extractor-changed-options=The miners available to you have changed since last you used P.U.M.P.. You may want to adjust your pick? 
+choose-extractor-generic=Select which miner and pipes should be placed.
+choose-extractor-unknown-selection=Select which miner and pipes should be placed.
+choose-extractor-changed-options=The miners and/or pipes available to you have changed since last you used P.U.M.P.. You may want to adjust your pick? 
