@@ -80,5 +80,7 @@ Date: 2021-01-02
 ---------------------------------------------------------------------------------------------------
 Version: 1.0.2
 Date: ?  
+  Features:
+    - Added pipe-selection to the selection menu.
   Fixes:
-    - Fix crash when an extractor larger then 3x3 is used.
+    - Fix crash when an extractor larger then 3x3 is used.  
